--- a/Css/phone.css
+++ b/Css/phone.css
@@ -1,60 +1,76 @@
+section {
+    height: 100vh;
+}
+
+
 /* Navigation */
 #navbar {
     flex-direction: column;
 }
 
-#navbar ul li a{
-    font-size: 1rem;
-    padding: 0px 7px;
-    padding-bottom: 8px;
+#navbar ul {
+    display: none;
 }
+
 /* Home section */
-#home{
-    height: 370px; 
+#home {
     padding: 3px 28px;
 }
 
-#home::before{
-    height: 480px; 
+#home::before {
+    height: 100%
 }
 
-#home p{
+#home p {
     font-size: 13px;
 }
 
 /* Services section  */
-#services{
-    flex-direction: column;
+
+#services-container{
+    height: auto;
 }
 
-#services .box { 
-    padding: 14px;
-    margin: 2px 0px; 
-    margin-bottom: 20px;
+
+#services {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+}
+
+#services .box {
+    height: 90%;
+}
+
+#services .box img {
+    width: 100%;
 }
 
 /* Clients section */
-#clients{
+#clients {
     flex-wrap: wrap;
 }
 
-#clients img{
+#clients img {
     width: 66px;
     padding: 6px;
     height: auto;
 }
 
 /* Contact us section */
-#contact-box form{
-    width:80%;
+#contact-box form {
+    width: 80%;
 }
+
 /* Footer */
 
 /* Utility classes */
-.h-primary{
-    font-size:26px;
+.h-primary {
+    font-size: 26px;
 }
-.btn{
+
+.btn {
     font-size: 13px;
     padding: 4px 8px;
 }
