--- a/Css/style.css
+++ b/Css/style.css
@@ -1,23 +1,33 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 10px;
+}
+
+section {
+    height: 100vh;
+    border: none;
 }
 
 /* Navigation bar */
 #navbar {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    height: 80px;
     top: 0px;
     position: sticky;
+    z-index: 1;
 }
 
 /* navigation bar logo  */
-#logo {
-    margin: 10px 34px;
-}
 
 #logo img {
-    height: 59px;
+    height: 60px;
     margin: 3px 6px;
     border-radius: 57px;
 }
@@ -51,7 +61,7 @@
     position: absolute;
     width: 100%;
     opacity: 0.3;
-    z-index: -1;
+    z-index: -2;
 
 }
 
@@ -67,17 +77,15 @@
     display: flex;
     flex-direction: column;
     padding: 3px 200px;
-    height: 550px;
     justify-content: center;
     align-items: center;
 }
 
 #home::before {
     content: "";
-    height: 480px;
+    height: calc(100% + 80px);
     position: absolute;
     background: url('../images/bghome.jpg') no-repeat center center/cover;
-    height: 642px;
     top: 0px;
     left: 0px;
     width: 100%;
@@ -107,7 +115,6 @@
     font-size: 2.8rem;
     padding: 12px;
     font-family: 'Cutive', serif;
-    ;
 }
 
 .btn {
@@ -126,62 +133,92 @@
 }
 
 /* services section  */
-#services {
-    margin: 34px;
+
+#services-container {
     display: flex;
-    
+    justify-content: center;
+    flex-direction: column;
+}
+
+#services {
+    display: flex;
+    justify-content: space-around;
 }
 
 #services .box img {
-    height: 114px;
-    display: block;
-    margin: auto;
+    width: 90%;
+    height: 100%;
+}
+
+.img-container {
+    width: 100%;
+    height: 45%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #services .box {
-    border: 2px solid red;
-    padding: 34px;
+    height: 85%;
+    width: 30rem;
+    border: none;
     margin: 3px 6px;
     border-radius: 29px;
     background-color: white;
-
+    box-shadow: 11px 9px 28px 0px black;
 }
- .center {
+
+#services p {
+    font-size: 1.5rem;
+}
+
+.center {
     text-align: center;
 }
+
 /* client-section  */
-#client-section{ 
+#client-section {
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-#client-section::before{
- content: "";
- position: absolute;
- background: url('../images/bgclient.jpg')no-repeat center center/cover;
- width: 100%;
- height: 100%;
- z-index: -1;
- opacity: 0.3;
+#client-section::before {
+    content: "";
+    position: absolute;
+    background: url('../images/bgclient.jpg')no-repeat center center/cover;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.3;
 }
 
-#clients{
+#clients {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.client-items{
+.client-items {
     padding: 22px;
 }
 
-#clients img{
+#clients img {
     height: 124px;
 }
+
 /* contact section */
-#contact{
+#contact {
     position: relative;
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
-#contact::before{
+
+#contact::before {
     content: "";
     position: absolute;
     width: 100%;
@@ -191,26 +228,34 @@
     background: url("../images/bgcontact.jpg")no-repeat center center/cover;
 
 }
-#contact-box{
+
+#contact-box {
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
     padding-bottom: 34px;
 }
-#contact-box input,#contact textarea{
+
+#contact-box input,
+#contact textarea {
     width: 100%;
     padding: 0.5rem;
     border-radius: 9px;
     font: size 1.1rem;
+    outline: none;
 }
-#contact-box form{
+
+#contact-box form {
     width: 40%;
 }
-#contact-box label{
+
+#contact-box label {
     font-size: 1.3rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-footer{
+
+footer {
+    font-size: 1.1rem;
     background-color: black;
     color: white;
     padding: 9px 20px;
